--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -40,15 +40,26 @@ bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Attack1",Key=Gamepad_FaceButton_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Attack2",Key=Gamepad_FaceButton_Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Attack3",Key=Gamepad_FaceButton_Top,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Attack2",Key=NumPadSix,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Attack3",Key=Eight,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="LockOnR",Key=Gamepad_RightShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="LockOnL",Key=Gamepad_LeftShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Run",Key=Gamepad_LeftThumbstick,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Attack1",Key=NumPadFour,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Jump",Key=NumPadTwo,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="LockOnR",Key=NumPadNine,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="LockOnL",Key=NumPadSeven,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Run",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="X-Axis",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="Y-Axis",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="CameraX",Key=Gamepad_RightX,Scale=1.000000)
 +AxisMappings=(AxisName="CameraY",Key=Gamepad_RightY,Scale=1.000000)
++AxisMappings=(AxisName="X-Axis",Key=A,Scale=-1.000000)
++AxisMappings=(AxisName="X-Axis",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="Y-Axis",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="Y-Axis",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="CameraX",Key=MouseX,Scale=1.000000)
++AxisMappings=(AxisName="CameraY",Key=MouseY,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
